[SWD] - Website float icon forms works in Chrome fine but form contents is shifted in Firefox issue Fixed

--- a/skit_website/skit_snippets/static/src/css/float.css
+++ b/skit_website/skit_snippets/static/src/css/float.css
@@ -62,7 +62,7 @@ video::-webkit-media-controls {
 	height: 0;
   	width: 100%;
   	position: fixed; 
-  	z-index: 1;
+  	z-index: 9;
   	left: 0;
   	top: 0;
   	background-color: #29ce84; 
@@ -231,8 +231,7 @@ video::-webkit-media-controls {
 	}	
 /* fa-icon CONTENT */
 	.sks_float_fa_content {
-		margin-left: 3%;
-		margin-bottom: 0.5%;
+		margin: 0 0 0 2em;
 		color: #fff;
 	}
 /* INNER FORM SET WIDTH */
@@ -258,27 +257,31 @@ video::-webkit-media-controls {
 	}
 /* INPUT FIELDS */
 	.sks_float_input{
-		width:100%;
-		margin-right: 40%;
-		margin-bottom: 0.8em;
-		margin-top: 0.8em;
-		margin-left: auto;
+		width:18em;
+		margin: 0;
 		display: block;
-		padding:10px;
+		padding:0;
 		box-sizing:border-box;
 		background:none;
 		outline:none;resize:none;
 		border:0;
 		font-family:'Montserrat',sans-serif;
 		transition:all .3s;
-		border-bottom:2px solid #349067;
+		border-bottom:1px solid #349067;
 		font-size: 22px;
 		opacity: 0.3;
 	}
 /* FOCUS ON INPUT FIELDS */
 	.sks_float_input:focus{
-		border-bottom:2px solid #78788c;
+		border-bottom:1px solid #78788c;
+		background-color: transparent;
 	}
+
+/* HOVER ON INPUT FIELDS */
+	.sks_float_input:hover {
+		background-color: transparent;
+	}
+
 /* FIELD LABLE CONTENT */
 	.sks_float_p{
 		content:attr(type);
@@ -367,7 +370,7 @@ i.fa.fa-long-arrow-left.fa-flip-horizontal:hover {
 	display: table-cell;width: 1px;padding-right: .5rem;white-space: nowrap;
 }
 .contact_label{
-	font-size:22px !important; color:#fff; font-weight: 600;
+	font-size:22px !important; color:#fff; font-weight: 600; float: left; margin: 2%;
 }
 .contact_field_project_div{
 	content:attr(type); display:block; margin:0 0 0 0;width: 100%;
